2021-05-01	Hannes von Haugwitz <hannes@vonhaugwitz.com>
	* Document how to ignore read-only ext2 file attributes (closes: #47)

2021-04-25	Hannes von Haugwitz <hannes@vonhaugwitz.com>
	* Refactor e2fsattrs code
	* Improve warning message for cutoff database line (closes: #91)

2021-04-21	Hannes von Haugwitz <hannes@vonhaugwitz.com>
	* Add 'config_check_warn_unrestricted_rules' option (closes: #44)

2021-04-18	Hannes von Haugwitz  <hannes@vonhaugwitz.com>
	* Improve error message for negative rule with an
	  attribute expression (closes: #90)
	* Document changed_attributes report level format (closes: #95)

2021-02-10  Hannes von Haugwitz  <hannes@vonhaugwitz.com>
	* Release aide 0.17.3

2021-02-07  Hannes von Haugwitz  <hannes@vonhaugwitz.com>
	* Fix group usage in '--after' config line

2021-02-06  Hannes von Haugwitz  <hannes@vonhaugwitz.com>
	* Release aide 0.17.2

2021-02-02  Hannes von Haugwitz  <hannes@vonhaugwitz.com>
	* Fix null pointer dereference in db_close()
	* Fix out-of-bounds read of attributes array

2021-01-30  Hannes von Haugwitz  <hannes@vonhaugwitz.com>
	* Require file type for --path-check (closes #88)
	* Release aide 0.17.1

2021-01-29  Hannes von Haugwitz  <hannes@vonhaugwitz.com>
	* Fix some typos in log messages

2021-01-27  Hannes von Haugwitz  <hannes@vonhaugwitz.com>
	* Fix issue where 'different attributes' message is not shown

2021-01-24  Hannes von Haugwitz  <hannes@vonhaugwitz.com>
	* Fix typos in aide.conf manual page

2021-01-24  rui  <rui@meetup.com>
	* Remove leftover include of 'error.h'

2021-01-23  Hannes von Haugwitz  <hannes@vonhaugwitz.com>
	* Release aide 0.17

2021-01-22  Hannes von Haugwitz  <hannes@vonhaugwitz.com>
	* Update manual pages
	* Remove outdated aide.conf.in

2021-01-21  Hannes von Haugwitz  <hannes@vonhaugwitz.com>
	* Update README
	* Print --help to stdout
	* Remove manual.html
	* Add missing free()
	* Limit number of nested includes

2021-01-18  Hannes von Haugwitz  <hannes@vonhaugwitz.com>