@@ -1,4 +1,10 @@
 Version 0.18 (UNRELEASED)
+    * Deprecations:
+        - '@@ifdef', macro is now deprecated, use '@@if defined' instead
+        - '@@ifndef', macro is now deprecated, use '@@if not defined' instead
+        - '@@ifhost', macro is now deprecated, use '@@if hostame' instead
+        - '@@ifnhost', macro is now deprecated, use '@@if not hostname' instead
+    * Add @@if macro
     * Add 'config_check_warn_unrestricted_rules' option
     * Improve logging
     * Update documentation
